[gd_scene load_steps=9 format=3 uid="uid://xqv6p7gdeh44"]

[ext_resource type="Theme" uid="uid://0f7l5qrjhqko" path="res://main/ui/theme/main_theme.tres" id="1_2shtt"]
[ext_resource type="Script" path="res://main/ui/components/fighter_handler/fighter_handler.gd" id="2_uoii7"]
[ext_resource type="PackedScene" uid="uid://bqc7vjeujdmnl" path="res://main/ui/components/status_widget/StatusWidget.tscn" id="3_5lmrl"]
[ext_resource type="PackedScene" path="res://main/ui/components/progress_widget/ProgressWidget.tscn" id="4_jnour"]
[ext_resource type="PackedScene" path="res://main/ui/components/buff_handler/BuffHandler.tscn" id="5_etvma"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jkl50"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dxjg0"]
bg_color = Color(0.215686, 0.215686, 0.215686, 1)
expand_margin_left = 3.0
expand_margin_top = 3.0
expand_margin_right = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2y3fm"]
bg_color = Color(0, 0, 0, 0.788235)
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[node name="FighterHandler" type="PanelContainer"]
offset_right = 73.0
offset_bottom = 39.0
size_flags_vertical = 0
theme = ExtResource("1_2shtt")
script = ExtResource("2_uoii7")

[node name="SelectButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_jkl50")
theme_override_styles/hover = SubResource("StyleBoxFlat_dxjg0")
theme_override_styles/focus = SubResource("StyleBoxFlat_dxjg0")

[node name="DataContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 1

[node name="StatusContainer" type="HBoxContainer" parent="DataContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="DataContainer/StatusContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.901961, 0.901961, 0.901961, 1)
theme_override_constants/line_spacing = 0
text = "Fighter"
text_overrun_behavior = 1

[node name="StatusIcon" parent="DataContainer/StatusContainer" instance=ExtResource("3_5lmrl")]
unique_name_in_owner = true
layout_mode = 2

[node name="HealthBar" parent="DataContainer" instance=ExtResource("4_jnour")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
label = "h"
high_color = Color(1, 1, 1, 1)
low_color = Color(0.188235, 0.188235, 0.188235, 1)
segments = 5

[node name="StaminaBar" parent="DataContainer" instance=ExtResource("4_jnour")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
label = "s"
high_color = Color(1, 0.25098, 0.376471, 1)
low_color = Color(0.305882, 0, 0.25098, 1)
segments = 5

[node name="BuffHandler" parent="." instance=ExtResource("5_etvma")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="ActivePanel" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2y3fm")

[node name="Label" type="Label" parent="ActivePanel"]
layout_mode = 2
size_flags_horizontal = 4
text = "ACTIVE"

[node name="EmptyLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color(0.333333, 0.333333, 0.333333, 1)
custom_minimum_size = Vector2(65, 32)
layout_mode = 2
size_flags_horizontal = 4
text = "EMPTY"
horizontal_alignment = 1
vertical_alignment = 1
